tests/typecheck/should_run/T8492.hs
module Main where

x :: ((->) Int) Bool
x = (==0)

main = print $ x 0
